<resources>
    <string name="app_name">CadastroAlunos</string>
    <string name="ra">Ra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="turma">Turma</string>
    <string name="turmas">Turmas</string>
    <string name="dtNasc">Dt. Nascimento</string>
    <string name="dtMatricula">Dt. Matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>

    <string name="nomeDisciplina">Nome da Disciplina</string>

    <string name="disciplinas">Disciplinas</string>
    <string name="disciplina">Disciplina</string>
    <string name="selecioneDisciplina">Selecione a Disciplina</string>

    <string name="nota">Nota</string>
    <string name="notas">Notas</string>
    <string name="frequencia">Frequência</string>

    <string name="totalDeAulas">Total de Aulas</string>

    <string name="dataDaPresenca">Data da Presença</string>

    <string name="notasVazias">Este aluno ainda não possui notas</string>
    <string name="frequenciaVazias">Este aluno ainda não possui frequencia</string>

    <!-- Tela de criação de turmas -->
    <string name="regime">Regime</string>
    <string name="selecioneRegime">Regime</string>
    <string name="selecioneProfessor">Professor</string>
    <string name="professor">Professor</string>
    <string name="professores">Professores</string>
    <string name="selecioneAlunos">Selecione os Alunos</string>
    <string name="alunos">Alunos</string>

    <string name="id">ID</string>
    <string name="selecioneCurso">Curso</string>
    <string name="selecionePeriodo">Período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="selecioneTurma">Selecione a Turma</string>

</resources>