<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lnPrincipal"
    tools:context=".activities.cadastros.CadastroAlunoActivity">

    <!--Criação layout do appbar e toolBar-->
    <!--<com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolBar"
            android:background="?attr/colorPrimary">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/ra">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edRaAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNomeAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/cpf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edCpfAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/dtNasc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDtNascAluno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="selecionarData"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/dtMatricula">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDtMatAluno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="selecionarData"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spRegimeAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="visible"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/regime"
        app:ms_hint="@string/selecioneRegime"
        app:ms_multiline="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spCursoAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_floatingLabelText="@string/cursos"
            app:ms_hint="@string/selecioneCurso"
            app:ms_multiline="true" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spPeriodoAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_floatingLabelText="@string/periodo"
            app:ms_hint="@string/selecionePeriodo"
            app:ms_multiline="true" />
    </LinearLayout>


</LinearLayout>